stream api included